tests/it/ui/unused_fields.stderr
error: field `y` is never read
 --> tests/it/ui/unused_fields.rs:7:5
  |
5 | pub struct Foo {
  |            --- field in this struct
6 |     x: i32,
7 |     y: i32,
  |     ^
  |
note: the lint level is defined here
 --> tests/it/ui/unused_fields.rs:1:9
  |
1 | #![deny(dead_code)] // Becuase ui-test requires an error, not warning
  |         ^^^^^^^^^
